Name:                tweetov
Version:             0.2.3
Synopsis:            Markov chains from tweets
License-file:        LICENSE
Author:              Jasper Van der Jeugt
Maintainer:          jaspervdj@gmail.com
Stability:           Experimental
Category:            Network
Build-type:          Simple
Cabal-version:       >= 1.2

Executable tweetov
  Ghc-options:    -Wall -O2 -fno-warn-unused-do-bind -threaded
  Main-is:        Tweetov/Main.hs
  Hs-source-dirs: src

  Other-modules:
    Tweetov.Application,
    Tweetov.Views,
    Tweetov.Twitter,
    Tweetov.Twitter.Markov,
    Tweetov.Twitter.Redis,
    Tweetov.Data.Markov

  Build-depends:
    base        >= 4    && < 5,
    aeson       >= 0.6  && < 0.7,
    text        >= 0.11 && < 0.12,
    binary      >= 0.5  && < 0.6,
    blaze-html  >= 0.5  && < 0.6,
    redis       >= 0.12 && < 0.13,
    bytestring  >= 0.9  && < 0.10,
    containers  >= 0.4  && < 0.5,
    snap-core   >= 0.8  && < 0.9,
    snap-blaze  >= 0.1  && < 0.2,
    attoparsec  >= 0.10 && < 0.11,
    random      >= 1.0  && < 1.1,
    mtl         >= 2.0  && < 2.2,
    snap-server >= 0.8  && < 0.9
