Name:                tweetov
Version:             0.3.0.0
Synopsis:            Markov chains from tweets
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Stability:           Experimental
Category:            Network
Build-type:          Simple
Cabal-version:       >= 1.2

Executable tweetov
  Ghc-options:    -Wall -O2 -fno-warn-unused-do-bind -threaded
  Main-is:        Tweetov/Main.hs
  Hs-source-dirs: src

  Other-modules:
    Tweetov.Application,
    Tweetov.Views,
    Tweetov.Twitter,
    Tweetov.Twitter.Markov,
    Tweetov.Data.Markov

  Build-depends:
    aeson       >= 0.6  && < 0.7,
    attoparsec  >= 0.10 && < 0.11,
    base        >= 4    && < 5,
    blaze-html  >= 0.5  && < 0.7,
    bytestring  >= 0.9  && < 0.11,
    containers  >= 0.4  && < 0.6,
    mtl         >= 2.0  && < 2.2,
    random      >= 1.0  && < 1.1,
    snap-blaze  >= 0.1  && < 0.3,
    snap-core   >= 0.8  && < 0.10,
    snap-server >= 0.8  && < 0.10,
    text        >= 0.11 && < 0.12
